overflow fix for main container

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@
 .main__wrapper {
   padding-bottom: 50px;
   position: relative;
+  overflow: hidden;
 }
 
 .intro__container {
